fix(storefront): break words on mobile

--- a/apps/storefront/components/MdxContent/MdxContent.module.css
+++ b/apps/storefront/components/MdxContent/MdxContent.module.css
@@ -72,10 +72,18 @@
     opacity: 1;
   }
 
+  & > ul,
+  & > ol {
+    max-width: 100%;
+    padding-left: var(--ds-size-5);
+    box-sizing: border-box;
+  }
+
   & > ul > li,
   & > ol > li {
     font: var(--ds-typography-paragraph-md);
     line-height: 1.9em;
+    word-break: break-word; /* Add this to prevent text from overflowing */
   }
 
   & > ul > li > ol,
